# SectionProperties

./: CMakeLists.txt  scrap_cpp.txt  scrap_h.txt
example/: main.cpp
gui/: CMakeLists.txt
gui/assets/: paper-plane.icns
gui/assets/mac/: taskbar_dark.icns  taskbar_light.icns
gui/include/: app.h  graphics2d.h  imagepanel.h  input.h  mainwnd.h  output.h
gui/src/: CMakeLists.txt  app.cpp  graphics2d.cpp  imagepanel.cpp  input.cpp  mainwnd.cpp  output.cpp
include/xprop/: eigen.h  matrix.h  point.h  section.h
src/: CMakeLists.txt  matrix.cpp  point.cpp  section.cpp
